# cmpsc441lab

./: ai_dm.db  pyproject.toml
AIDMGame/: Project.md  README.md  character_parser.py  lab14.py
AIDMGame/templates/: dm_chat.json  dm_combat.json  dm_enhanced.json
AIDMGame/tools/: __init__.py  dice_tools.py  knowledge_tools.py
AIDMGame/utils/: __init__.py  base.py  enhanced_llm.py  game.py  llm_utils.py  player.py  strategic_ai.py
Lab14/: Lab14.md  lab14.py  test_lab14.py
chroma_db/: chroma.sqlite3
lab01/: lab01.py
lab02/: dict_json_exercise.py  generator_exercise.py
lab03/: attempts.txt  lab03.md  lab03_dnd_agent.py  run_scenarios.py
lab04/: lab04.py  lab04_dm.json  lab04_enemy.json  lab04_npc.json  test_lab04.py
lab05/: lab05-tool-use.md  lab05.py  lab05_dice_template.json
lab06/: lab06.py
lab08/: RAG_README.md  lab08.py
lab11/: lab11.py  lab11_reflection.md  mcp-lab-README.md  mcp_server.py
lab15/: lab15.py
util/: base.py
